--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,14 @@ path = "src/ktx2-info.rs"
 name = "ktx2-to-dds"
 path = "src/ktx2-to-dds.rs"
 
+[[bin]]
+name = "ktx2-bc6h-compress"
+path = "src/ktx2-bc6h-compress.rs"
+
 [dependencies]
 ddsfile = "0.5.1"
 ktx2 = { git = "https://github.com/expenses/ktx2", branch = "as-bytes" }
+pollster = "0.2.5"
 zstd = "0.11.2"
+wgpu-bc6h-compression = { git = "https://github.com/expenses/wgpu-bc6h-compression" }
+wgpu = "0.12.0"
