--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,4 @@ pollster = "0.2.5"
 zstd = "0.11.2"
 wgpu-bc6h-compression = { git = "https://github.com/expenses/wgpu-bc6h-compression" }
 wgpu = "0.12.0"
+basis-universal = "0.2.0"
