Broken Pillow BC6H stuff

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,10 @@ path = "src/ktx2-to-dds.rs"
 name = "ktx2-bc6h-compress"
 path = "src/ktx2-bc6h-compress.rs"
 
+[[bin]]
+name = "extract-bc6h"
+path = "src/extract-bc6h.rs"
+
 [dependencies]
 ddsfile = "0.5.1"
 ktx2 = { git = "https://github.com/expenses/ktx2", branch = "as-bytes" }
@@ -30,3 +34,4 @@ zstd = "0.11.2"
 wgpu-bc6h-compression = { git = "https://github.com/expenses/wgpu-bc6h-compression" }
 wgpu = "0.12.0"
 basis-universal = "0.2.0"
+bcndecode = { path = "bcndecode" }
