Working compute shader!

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,20 +18,22 @@ path = "src/ktx2-info.rs"
 name = "ktx2-to-dds"
 path = "src/ktx2-to-dds.rs"
 
-[[bin]]
-name = "ktx2-bc6h-compress"
-path = "src/ktx2-bc6h-compress.rs"
-
-[[bin]]
-name = "extract-bc6h"
-path = "src/extract-bc6h.rs"
+#[[bin]]
+#name = "ktx2-bc6h-compress"
+#path = "src/ktx2-bc6h-compress.rs"
 
 [dependencies]
 ddsfile = "0.5.1"
 ktx2 = { git = "https://github.com/expenses/ktx2", branch = "as-bytes" }
 pollster = "0.2.5"
 zstd = "0.11.2"
-wgpu-bc6h-compression = { git = "https://github.com/expenses/wgpu-bc6h-compression" }
-wgpu = "0.12.0"
+#wgpu-bc6h-compression = { git = "https://github.com/expenses/wgpu-bc6h-compression" }
+wgpu = { version = "0.12.0", features = ["spirv"] }
 basis-universal = "0.2.0"
-bcndecode = { path = "bcndecode" }
+futures-intrusive = "0.4.0"
+
+[patch.crates-io]
+wgpu = { path = "../../wgpu/wgpu" }
+
+#[patch."https://github.com/gfx-rs/naga"]
+#naga = { git = "https://github.com/gfx-rs/naga" }
