--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,9 +31,10 @@ zstd = "0.11.2"
 wgpu = { version = "0.12.0", features = ["spirv"] }
 basis-universal = "0.2.0"
 futures-intrusive = "0.4.0"
+env_logger = "0.9.0"
 
 [patch.crates-io]
 wgpu = { path = "../../wgpu/wgpu" }
 
-#[patch."https://github.com/gfx-rs/naga"]
-#naga = { git = "https://github.com/gfx-rs/naga" }
+[patch."https://github.com/gfx-rs/naga"]
+naga = { path = "../../naga" }
