Update ktx2 branch

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ path = "src/ktx2-bc6h-compress.rs"
 
 [dependencies]
 ddsfile = "0.5.1"
-ktx2 = { git = "https://github.com/expenses/ktx2", branch = "as-bytes" }
+ktx2 = { git = "https://github.com/BVE-Reborn/ktx2" }
 pollster = "0.2.5"
 zstd = "0.11.2"
 basis-universal = "0.2.0"
