--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ cubemap-spherical-harmonics = { git = "https://github.com/DGriffin91/cubemap-sph
 image = "0.24.7"
 half = "2.3.1"
 rayon = "1.8.0"
-astcenc-rs = { git = "https://github.com/expenses/astcenc-rs" }
+astcenc-rs = { git = "https://github.com/eira-fransham/astcenc-rs" }
 
 [patch.'https://github.com/BVE-Reborn/ktx2']
 ktx2 = { git = "https://github.com/expenses/ktx2", branch = "astc-sfloat-formats" }
