--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,10 +23,6 @@ name = "ktx2-bc6h-compress"
 path = "src/ktx2-bc6h-compress.rs"
 
 [[bin]]
-name = "ktx2-to-sphere-harmonics"
-path = "src/ktx2-to-sphere-harmonics.rs"
-
-[[bin]]
 name = "compress-bc7"
 path = "src/compress-bc7.rs"
 
@@ -36,16 +32,12 @@ path = "src/dds-to-ktx2.rs"
 
 [dependencies]
 ddsfile = "0.5.2"
-ktx2 = { git = "https://github.com/BVE-Reborn/ktx2" }
-zstd = "0.13.0"
+ktx2 = "*"
+zstd = "0.13.3"
 basis-universal = "0.3.1"
 intel_tex_2 = "0.2.2"
 structopt = "0.3.26"
-cubemap-spherical-harmonics = { git = "https://github.com/DGriffin91/cubemap-spherical-harmonics", version = "0.1.0" }
-image = "0.24.7"
-half = "2.3.1"
-rayon = "1.8.0"
-astcenc-rs = { git = "https://github.com/eira-fransham/astcenc-rs" }
-
-[patch.'https://github.com/BVE-Reborn/ktx2']
-ktx2 = { git = "https://github.com/expenses/ktx2", branch = "astc-sfloat-formats" }
+image = "0.24.9"
+half = "2.6.0"
+rayon = "1.10.0"
+#astcenc-rs = "0.1.1"
